--- a/exerciseDetail.html
+++ b/exerciseDetail.html
@@ -15,6 +15,7 @@
         <h1 id="exerciseName"></h1>
         <div id="exerciseDetails"></div>
         
+        <div id="userLocation"></div>
         
         <h2>근처 동호회</h2>
         <div id="clubList"></div>  <!-- 동호회 목록이 표시될 부분 -->
